fix sidebar button alignment and sizing

--- a/src/app/sidebar/button/button.component.scss
+++ b/src/app/sidebar/button/button.component.scss
@@ -2,6 +2,18 @@ button {
     min-width: 24px;
     font-size: 18px;
     line-height: 24px;
+    height: 24px !important;
     padding: 0;
     border-radius: 0;
+
+    & mat-icon {
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
+
+::ng-deep {
+    .mat-mdc-button .mat-mdc-button-touch-target {
+        height: 24px;
+    }
 }
